<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/new_back"
    android:orientation="vertical">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/title"
        android:orientation="horizontal">


        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="18dp"
            android:clickable="true"
            android:onClick="goBack"
            android:src="@drawable/left"/>

        <TextView
            android:id="@+id/textView_welcome"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:gravity="center"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />


        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"/>


        </LinearLayout>



    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/editText_email2_"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/editText_username_"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/user_name"
            android:inputType="text"
            android:textSize="20dp"

            />

        <EditText
            android:id="@+id/editText_pass2_"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"

            android:hint="@string/password"
            android:inputType="text"
            android:textSize="20dp" />


        <EditText
            android:id="@+id/editText_confirm_"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"

            android:hint="@string/confirm_password"
            android:inputType="text"
            android:textSize="20dp" />

        <RadioGroup
            android:id="@+id/radio_grp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:checkedButton="@+id/female"
            android:orientation="horizontal">


            <RadioButton
                android:id="@+id/male"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/male"
                android:textSize="20sp" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5" />

            <RadioButton
                android:id="@+id/female"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/female"
                android:textSize="20sp" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5" />

        </RadioGroup>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3" />

        <Button
            android:id="@+id/button_sign_up2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="0.8"
            android:background="@drawable/button_style2"
            android:text="@string/sign_up2"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>