<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/new_back"
    android:orientation="vertical"
    tools:context="main">

    <TextView
        android:id="@+id/textView_welcome"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/title"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:weightSum="4"
        android:gravity="center"
        android:orientation="horizontal">


        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/mylogo"/>
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/user_name"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editText_user"
            android:layout_width="0dp"
            android:layout_marginRight="10dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:hint="@string/user_name"
            android:inputType="text"
            android:textSize="18sp" />



    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/password"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editText_pass"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:layout_marginRight="10dp"
            android:hint="@string/password"
            android:inputType="text"
            android:textSize="18sp" />




    </LinearLayout>

    <TextView
        android:id="@+id/forget"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="0dp"
        android:layout_weight="0.9"
        android:gravity="center"
        android:text="@string/forget"
        android:textSize="15sp"
        android:textStyle="bold"
        android:clickable="true"
        android:layout_marginTop="20dp"
        android:onClick="forget" />


    <Button
        android:id="@+id/button_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@drawable/button_style2"
        android:onClick="Sign_in"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/textView_create"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:gravity="center"
        android:text="@string/create_new"
        android:textSize="15sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@drawable/button_style2"
        android:onClick="CreateAccount"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2" />


</LinearLayout>
