<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.myproject.ChangePasswordActivity">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="0dp"
          android:layout_weight="1"
          android:background="@drawable/title"
          android:orientation="horizontal">

          <ImageView
              android:layout_width="0dp"
              android:layout_height="match_parent"
              android:layout_margin="14dp"
              android:layout_weight="1"
              android:clickable="true"
              android:onClick="cancel"
              android:src="@drawable/cancel" />

          <TextView
              android:id="@+id/textView_welcome"
              android:layout_width="0dp"
              android:layout_height="match_parent"
              android:layout_weight="4"
              android:gravity="center"
              android:paddingRight="70dp"
              android:text="@string/wjhty"
              android:textColor="@color/white"
              android:textSize="20sp"
              android:textStyle="bold" />

      </LinearLayout>

      <Space
          android:layout_width="match_parent"
          android:layout_height="0dp"
          android:layout_weight="2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/newPass"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="right"
            android:layout_weight="1"
            android:hint="@string/newPassword"
            android:inputType="textPassword"
            android:textSize="22dp" />

        <EditText
            android:id="@+id/conNewPass"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="right"
            android:hint="@string/confirm_newpassword"
            android:inputType="textPassword"
            android:textSize="22dp"

            />



        <Button
            android:id="@+id/change_pass2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_style2"
            android:text="@string/change"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />


      </LinearLayout>




      <Space
          android:layout_width="match_parent"
          android:layout_height="0dp"
          android:layout_weight="3" />

    </LinearLayout>



</RelativeLayout>
