<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/new_back"
    android:orientation="vertical"
    tools:context="com.example.user.myproject.Edit_Profile_Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.8"
        android:background="@drawable/title"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="13dp"
            android:layout_weight="1"
            android:clickable="true"
            android:onClick="Cancel"
            android:src="@drawable/cancel" />

        <TextView
            android:id="@+id/textView_welcome"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/edit_profile"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="13dp"
            android:layout_weight="1"
            android:clickable="true"
            android:onClick="SaveChanges"
            android:src="@drawable/check" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/personalImage2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:src="@drawable/user" />

            <TextView
                android:id="@+id/edit"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="EditImage"
                android:text="@string/change" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/just_name"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="end"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/username_profile"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="end"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/name"
                android:textSize="17sp"

                />

            <TextView
                android:id="@+id/define"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/u_name"
                android:textSize="14sp" />


        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/defi"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:gravity="start"
        android:paddingRight="20dp"
        android:text="@string/definition"
        android:textSize="18dp" />


    <EditText
        android:id="@+id/description_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textSize="14sp"
        android:gravity="top"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_weight="1.5"
        android:background="#dddddd" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp"
        android:background="@color/silver"
        android:paddingLeft="10dp" />

    <TextView
        android:id="@+id/secret"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:gravity="start"
        android:paddingRight="10dp"
        android:text="@string/secret"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.7"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">


            <EditText
                android:id="@+id/email__"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:inputType="textEmailAddress"
                android:paddingLeft="10dp"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/radio_grp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checkedButton="@id/female"
                android:orientation="horizontal">

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5" />

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/male"
                    android:clickable="false"
                    android:textSize="15sp" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5" />

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:text="@string/female"
                    android:textSize="15sp" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5" />

            </RadioGroup>


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/email_"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingRight="10dp"
                android:text="@string/email2"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/gender_"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingRight="10dp"
                android:text="@string/gender"
                android:textSize="16dp" />


        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp"
        android:background="@color/silver"
        android:paddingLeft="10dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/change_password"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                  >
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:onClick="changePass"
                    android:src="@drawable/pass"/>
                </LinearLayout>

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_marginRight="20dp"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/change_pass"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/change_pass"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/privacy"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/privacy"
                android:textSize="14sp" />

        </LinearLayout>


    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/home1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="12dp"
            android:layout_weight="1"
            android:background="@drawable/button_style4"
            android:gravity="center"
            android:onClick="GoHome">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:src="@drawable/hom" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/search1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="12dp"
            android:layout_weight="1"
            android:background="@drawable/button_style4"
            android:gravity="center"
            android:onClick="GoPost">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:src="@drawable/add" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/notifications1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="12dp"
            android:layout_weight="1"
            android:background="@drawable/button_style4"
            android:gravity="center"
            android:onClick="GoNotifications">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:src="@drawable/noti" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/profile1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_style1"
            android:gravity="center"
            android:onClick="GoProfile">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:src="@drawable/pro" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>