<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"

    tools:context="com.example.user.myproject.SettingsActivity">


    <LinearLayout
        android:id="@+id/textView_welcome"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/title"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:layout_weight="0.4"
            android:clickable="true"
            android:onClick="goBack2"
            android:src="@drawable/left" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="4"
            android:gravity="center"
            android:paddingRight="50dp"
            android:text="@string/wjhty"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:background="@drawable/new_back"
        android:clickable="true"
        android:gravity="center"
        android:onClick="back"
        android:orientation="vertical"
        android:weightSum="9">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="2.4"
            android:gravity="center"
            android:orientation="vertical">


            <Button
                android:id="@+id/popup_menu_button1"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/button_style2"
                android:text="@string/edit_profile"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/popup_menu_button2"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/button_style2"
                android:text="@string/logout"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />


        </LinearLayout>

    </LinearLayout>


</LinearLayout>
